// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadLicense should display a modal when license requires acknowledgement 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(UploadLicense)>
    <UploadLicense
      addUploadErrorMessage={[Function]}
      applying={false}
      currentLicenseType=""
      errorMessage=""
      isInvalid={false}
      messages={
        Array [
          "Some functionality will be lost if you replace your 
        TRIAL license with a
        BASIC license.  Review the list of features below.",
          Array [
            "Watcher will be disabled",
          ],
        ]
      }
      needsAcknowledgement={true}
      uploadLicense={[Function]}
      uploadLicenseStatus={[Function]}
    >
      <div
        className="licenseManagement__contain"
      >
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="l"
          justifyContent="spaceAround"
          responsive={true}
          wrap={false}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--responsive"
          >
            <EuiFlexItem
              component="div"
              grow={false}
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <EuiTitle
                  size="l"
                >
                  <h1
                    className="euiTitle euiTitle--large"
                  >
                    Upload your license
                  </h1>
                </EuiTitle>
              </div>
            </EuiFlexItem>
          </div>
        </EuiFlexGroup>
        <EuiSpacer
          size="l"
        >
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiOverlayMask>
              <EuiConfirmModal
                buttonColor="primary"
                cancelButtonText="Cancel"
                confirmButtonText="Confirm"
                onCancel={[Function]}
                onConfirm={[Function]}
                title="Confirm License Upload"
              >
                <EuiModal
                  className="euiModal--confirmation"
                  onClose={[Function]}
                >
                  <Component
                    focusTrapOptions={
                      Object {
                        "fallbackFocus": [Function],
                      }
                    }
                  >
                    <div>
                      <div
                        className="euiModal euiModal--confirmation"
                        onKeyDown={[Function]}
                        tabIndex={0}
                      >
                        <EuiButtonIcon
                          aria-label="Closes this modal window"
                          className="euiModal__closeIcon"
                          color="text"
                          iconType="cross"
                          onClick={[Function]}
                          type="button"
                        >
                          <button
                            aria-label="Closes this modal window"
                            className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
                            onClick={[Function]}
                            type="button"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiButtonIcon__icon"
                              size="m"
                              type="cross"
                            >
                              <cross
                                aria-hidden="true"
                                className="euiIcon euiIcon--medium euiButtonIcon__icon"
                                height="16"
                                style={
                                  Object {
                                    "fill": undefined,
                                  }
                                }
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--medium euiButtonIcon__icon"
                                  height="16"
                                  style={
                                    Object {
                                      "fill": undefined,
                                    }
                                  }
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                  xmlnsXlink="http://www.w3.org/1999/xlink"
                                >
                                  <defs>
                                    <path
                                      d="M7.293 8l-4.147 4.146a.5.5 0 0 0 .708.708L8 8.707l4.146 4.147a.5.5 0 0 0 .708-.708L8.707 8l4.147-4.146a.5.5 0 0 0-.708-.708L8 7.293 3.854 3.146a.5.5 0 1 0-.708.708L7.293 8z"
                                      id="cross-a"
                                    />
                                  </defs>
                                  <use
                                    fillRule="nonzero"
                                    xlinkHref="#cross-a"
                                  />
                                </svg>
                              </cross>
                            </EuiIcon>
                          </button>
                        </EuiButtonIcon>
                        <EuiModalHeader>
                          <div
                            className="euiModalHeader"
                          >
                            <EuiModalHeaderTitle
                              data-test-subj="confirmModalTitleText"
                            >
                              <div
                                className="euiModalHeader__title"
                                data-test-subj="confirmModalTitleText"
                              >
                                Confirm License Upload
                              </div>
                            </EuiModalHeaderTitle>
                          </div>
                        </EuiModalHeader>
                        <EuiModalBody>
                          <div
                            className="euiModalBody"
                          >
                            <EuiText
                              data-test-subj="confirmModalBodyText"
                            >
                              <div
                                className="euiText"
                                data-test-subj="confirmModalBodyText"
                              >
                                <div>
                                  <EuiText>
                                    <div
                                      className="euiText"
                                    >
                                      Some functionality will be lost if you replace your 
        TRIAL license with a
        BASIC license.  Review the list of features below.
                                    </div>
                                  </EuiText>
                                  <EuiText>
                                    <div
                                      className="euiText"
                                    >
                                      <ul>
                                        <li
                                          key="Watcher will be disabled"
                                        >
                                          Watcher will be disabled
                                        </li>
                                      </ul>
                                    </div>
                                  </EuiText>
                                </div>
                              </div>
                            </EuiText>
                          </div>
                        </EuiModalBody>
                        <EuiModalFooter>
                          <div
                            className="euiModalFooter"
                          >
                            <EuiButtonEmpty
                              buttonRef={[Function]}
                              color="primary"
                              data-test-subj="confirmModalCancelButton"
                              iconSide="left"
                              onClick={[Function]}
                              type="button"
                            >
                              <button
                                className="euiButtonEmpty euiButtonEmpty--primary"
                                data-test-subj="confirmModalCancelButton"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiButtonEmpty__content"
                                >
                                  <span>
                                    Cancel
                                  </span>
                                </span>
                              </button>
                            </EuiButtonEmpty>
                            <EuiButton
                              buttonRef={[Function]}
                              color="primary"
                              data-test-subj="confirmModalConfirmButton"
                              fill={true}
                              iconSide="left"
                              onClick={[Function]}
                              type="button"
                            >
                              <button
                                className="euiButton euiButton--primary euiButton--fill"
                                data-test-subj="confirmModalConfirmButton"
                                onClick={[Function]}
                                type="button"
                              >
                                <span
                                  className="euiButton__content"
                                >
                                  <span
                                    className="euiButton__text"
                                  >
                                    Confirm
                                  </span>
                                </span>
                              </button>
                            </EuiButton>
                          </div>
                        </EuiModalFooter>
                      </div>
                    </div>
                  </Component>
                </EuiModal>
              </EuiConfirmModal>
            </EuiOverlayMask>
            <EuiText>
              <div
                className="euiText"
              >
                Your license key is a JSON file with a signature attached.
              </div>
            </EuiText>
            <EuiText>
              <div
                className="euiText"
              >
                Uploading a license will replace your current
                 
                <strong />
                 license.
              </div>
            </EuiText>
            <EuiSpacer
              size="l"
            >
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiForm
              error={null}
              isInvalid={false}
            >
              <div
                className="euiForm"
              >
                <EuiText>
                  <div
                    className="euiText"
                  >
                    <EuiFilePicker
                      id="licenseFile"
                      initialPromptText="Select or drag your license file"
                      onChange={[Function]}
                    >
                      <div
                        className="euiFilePicker"
                      >
                        <div
                          className="euiFilePicker__wrap"
                        >
                          <input
                            className="euiFilePicker__input"
                            id="licenseFile"
                            onChange={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                            type="file"
                          />
                          <div
                            className="euiFilePicker__prompt"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFilePicker__icon"
                              size="l"
                              type="importAction"
                            >
                              <importAction
                                aria-hidden="true"
                                className="euiIcon euiIcon--large euiFilePicker__icon"
                                height="16"
                                style={
                                  Object {
                                    "fill": undefined,
                                  }
                                }
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--large euiFilePicker__icon"
                                  height="16"
                                  style={
                                    Object {
                                      "fill": undefined,
                                    }
                                  }
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                                  />
                                </svg>
                              </importAction>
                            </EuiIcon>
                            <div
                              className="euiFilePicker__promptText"
                            >
                              Select or drag your license file
                            </div>
                          </div>
                        </div>
                      </div>
                    </EuiFilePicker>
                  </div>
                </EuiText>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiFlexGroup
                  alignItems="stretch"
                  component="div"
                  gutterSize="l"
                  justifyContent="spaceBetween"
                  responsive={true}
                  wrap={false}
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--responsive"
                  >
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButtonEmpty
                          color="primary"
                          href="#/management/elasticsearch/license_management/home"
                          iconSide="left"
                          type="button"
                        >
                          <a
                            className="euiButtonEmpty euiButtonEmpty--primary"
                            href="#/management/elasticsearch/license_management/home"
                          >
                            <span
                              className="euiButtonEmpty__content"
                            >
                              <span>
                                Cancel
                              </span>
                            </span>
                          </a>
                        </EuiButtonEmpty>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButton
                          color="primary"
                          data-test-subj="uploadLicenseButton"
                          fill={true}
                          iconSide="left"
                          isLoading={false}
                          onClick={[Function]}
                          type="button"
                        >
                          <button
                            className="euiButton euiButton--primary euiButton--fill"
                            data-test-subj="uploadLicenseButton"
                            onClick={[Function]}
                            type="button"
                          >
                            <span
                              className="euiButton__content"
                            >
                              <span
                                className="euiButton__text"
                              >
                                Upload
                              </span>
                            </span>
                          </button>
                        </EuiButton>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
              </div>
            </EuiForm>
          </div>
        </EuiPanel>
      </div>
    </UploadLicense>
  </Connect(UploadLicense)>
</Provider>
`;

exports[`UploadLicense should display an error when ES says license is expired 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(UploadLicense)>
    <UploadLicense
      addUploadErrorMessage={[Function]}
      applying={false}
      currentLicenseType=""
      errorMessage="The supplied license has expired."
      isInvalid={false}
      needsAcknowledgement={false}
      uploadLicense={[Function]}
      uploadLicenseStatus={[Function]}
    >
      <div
        className="licenseManagement__contain"
      >
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="l"
          justifyContent="spaceAround"
          responsive={true}
          wrap={false}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--responsive"
          >
            <EuiFlexItem
              component="div"
              grow={false}
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <EuiTitle
                  size="l"
                >
                  <h1
                    className="euiTitle euiTitle--large"
                  >
                    Upload your license
                  </h1>
                </EuiTitle>
              </div>
            </EuiFlexItem>
          </div>
        </EuiFlexGroup>
        <EuiSpacer
          size="l"
        >
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiText>
              <div
                className="euiText"
              >
                Your license key is a JSON file with a signature attached.
              </div>
            </EuiText>
            <EuiText>
              <div
                className="euiText"
              >
                Uploading a license will replace your current
                 
                <strong />
                 license.
              </div>
            </EuiText>
            <EuiSpacer
              size="l"
            >
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiForm
              error={
                Array [
                  "The supplied license has expired.",
                ]
              }
              isInvalid={true}
            >
              <div
                className="euiForm"
              >
                <EuiCallOut
                  className="euiForm__errors"
                  color="danger"
                  size="m"
                  title="Please address the errors in your form."
                >
                  <div
                    className="euiCallOut euiCallOut--danger euiForm__errors"
                  >
                    <div
                      className="euiCallOutHeader"
                    >
                      <span
                        className="euiCallOutHeader__title"
                      >
                        Please address the errors in your form.
                      </span>
                    </div>
                    <EuiText
                      size="s"
                    >
                      <div
                        className="euiText euiText--small"
                      >
                        <ul>
                          <li
                            className="euiForm__error"
                            key="The supplied license has expired."
                          >
                            The supplied license has expired.
                          </li>
                        </ul>
                      </div>
                    </EuiText>
                  </div>
                </EuiCallOut>
                <EuiText>
                  <div
                    className="euiText"
                  >
                    <EuiFilePicker
                      id="licenseFile"
                      initialPromptText="Select or drag your license file"
                      onChange={[Function]}
                    >
                      <div
                        className="euiFilePicker"
                      >
                        <div
                          className="euiFilePicker__wrap"
                        >
                          <input
                            className="euiFilePicker__input"
                            id="licenseFile"
                            onChange={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                            type="file"
                          />
                          <div
                            className="euiFilePicker__prompt"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFilePicker__icon"
                              size="l"
                              type="importAction"
                            >
                              <importAction
                                aria-hidden="true"
                                className="euiIcon euiIcon--large euiFilePicker__icon"
                                height="16"
                                style={
                                  Object {
                                    "fill": undefined,
                                  }
                                }
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--large euiFilePicker__icon"
                                  height="16"
                                  style={
                                    Object {
                                      "fill": undefined,
                                    }
                                  }
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                                  />
                                </svg>
                              </importAction>
                            </EuiIcon>
                            <div
                              className="euiFilePicker__promptText"
                            >
                              Select or drag your license file
                            </div>
                          </div>
                        </div>
                      </div>
                    </EuiFilePicker>
                  </div>
                </EuiText>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiFlexGroup
                  alignItems="stretch"
                  component="div"
                  gutterSize="l"
                  justifyContent="spaceBetween"
                  responsive={true}
                  wrap={false}
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--responsive"
                  >
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButtonEmpty
                          color="primary"
                          href="#/management/elasticsearch/license_management/home"
                          iconSide="left"
                          type="button"
                        >
                          <a
                            className="euiButtonEmpty euiButtonEmpty--primary"
                            href="#/management/elasticsearch/license_management/home"
                          >
                            <span
                              className="euiButtonEmpty__content"
                            >
                              <span>
                                Cancel
                              </span>
                            </span>
                          </a>
                        </EuiButtonEmpty>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButton
                          color="primary"
                          data-test-subj="uploadLicenseButton"
                          fill={true}
                          iconSide="left"
                          isLoading={false}
                          onClick={[Function]}
                          type="button"
                        >
                          <button
                            className="euiButton euiButton--primary euiButton--fill"
                            data-test-subj="uploadLicenseButton"
                            onClick={[Function]}
                            type="button"
                          >
                            <span
                              className="euiButton__content"
                            >
                              <span
                                className="euiButton__text"
                              >
                                Upload
                              </span>
                            </span>
                          </button>
                        </EuiButton>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
              </div>
            </EuiForm>
          </div>
        </EuiPanel>
      </div>
    </UploadLicense>
  </Connect(UploadLicense)>
</Provider>
`;

exports[`UploadLicense should display an error when ES says license is invalid 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(UploadLicense)>
    <UploadLicense
      addUploadErrorMessage={[Function]}
      applying={false}
      currentLicenseType=""
      errorMessage="The supplied license is not valid for this product."
      isInvalid={false}
      needsAcknowledgement={false}
      uploadLicense={[Function]}
      uploadLicenseStatus={[Function]}
    >
      <div
        className="licenseManagement__contain"
      >
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="l"
          justifyContent="spaceAround"
          responsive={true}
          wrap={false}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--responsive"
          >
            <EuiFlexItem
              component="div"
              grow={false}
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <EuiTitle
                  size="l"
                >
                  <h1
                    className="euiTitle euiTitle--large"
                  >
                    Upload your license
                  </h1>
                </EuiTitle>
              </div>
            </EuiFlexItem>
          </div>
        </EuiFlexGroup>
        <EuiSpacer
          size="l"
        >
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiText>
              <div
                className="euiText"
              >
                Your license key is a JSON file with a signature attached.
              </div>
            </EuiText>
            <EuiText>
              <div
                className="euiText"
              >
                Uploading a license will replace your current
                 
                <strong />
                 license.
              </div>
            </EuiText>
            <EuiSpacer
              size="l"
            >
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiForm
              error={
                Array [
                  "The supplied license is not valid for this product.",
                ]
              }
              isInvalid={true}
            >
              <div
                className="euiForm"
              >
                <EuiCallOut
                  className="euiForm__errors"
                  color="danger"
                  size="m"
                  title="Please address the errors in your form."
                >
                  <div
                    className="euiCallOut euiCallOut--danger euiForm__errors"
                  >
                    <div
                      className="euiCallOutHeader"
                    >
                      <span
                        className="euiCallOutHeader__title"
                      >
                        Please address the errors in your form.
                      </span>
                    </div>
                    <EuiText
                      size="s"
                    >
                      <div
                        className="euiText euiText--small"
                      >
                        <ul>
                          <li
                            className="euiForm__error"
                            key="The supplied license is not valid for this product."
                          >
                            The supplied license is not valid for this product.
                          </li>
                        </ul>
                      </div>
                    </EuiText>
                  </div>
                </EuiCallOut>
                <EuiText>
                  <div
                    className="euiText"
                  >
                    <EuiFilePicker
                      id="licenseFile"
                      initialPromptText="Select or drag your license file"
                      onChange={[Function]}
                    >
                      <div
                        className="euiFilePicker"
                      >
                        <div
                          className="euiFilePicker__wrap"
                        >
                          <input
                            className="euiFilePicker__input"
                            id="licenseFile"
                            onChange={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                            type="file"
                          />
                          <div
                            className="euiFilePicker__prompt"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFilePicker__icon"
                              size="l"
                              type="importAction"
                            >
                              <importAction
                                aria-hidden="true"
                                className="euiIcon euiIcon--large euiFilePicker__icon"
                                height="16"
                                style={
                                  Object {
                                    "fill": undefined,
                                  }
                                }
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--large euiFilePicker__icon"
                                  height="16"
                                  style={
                                    Object {
                                      "fill": undefined,
                                    }
                                  }
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                                  />
                                </svg>
                              </importAction>
                            </EuiIcon>
                            <div
                              className="euiFilePicker__promptText"
                            >
                              Select or drag your license file
                            </div>
                          </div>
                        </div>
                      </div>
                    </EuiFilePicker>
                  </div>
                </EuiText>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiFlexGroup
                  alignItems="stretch"
                  component="div"
                  gutterSize="l"
                  justifyContent="spaceBetween"
                  responsive={true}
                  wrap={false}
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--responsive"
                  >
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButtonEmpty
                          color="primary"
                          href="#/management/elasticsearch/license_management/home"
                          iconSide="left"
                          type="button"
                        >
                          <a
                            className="euiButtonEmpty euiButtonEmpty--primary"
                            href="#/management/elasticsearch/license_management/home"
                          >
                            <span
                              className="euiButtonEmpty__content"
                            >
                              <span>
                                Cancel
                              </span>
                            </span>
                          </a>
                        </EuiButtonEmpty>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButton
                          color="primary"
                          data-test-subj="uploadLicenseButton"
                          fill={true}
                          iconSide="left"
                          isLoading={false}
                          onClick={[Function]}
                          type="button"
                        >
                          <button
                            className="euiButton euiButton--primary euiButton--fill"
                            data-test-subj="uploadLicenseButton"
                            onClick={[Function]}
                            type="button"
                          >
                            <span
                              className="euiButton__content"
                            >
                              <span
                                className="euiButton__text"
                              >
                                Upload
                              </span>
                            </span>
                          </button>
                        </EuiButton>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
              </div>
            </EuiForm>
          </div>
        </EuiPanel>
      </div>
    </UploadLicense>
  </Connect(UploadLicense)>
</Provider>
`;

exports[`UploadLicense should display an error when submitting invalid JSON 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(UploadLicense)>
    <UploadLicense
      addUploadErrorMessage={[Function]}
      applying={false}
      currentLicenseType=""
      errorMessage="Error encountered uploading license: Check your license file."
      isInvalid={false}
      needsAcknowledgement={false}
      uploadLicense={[Function]}
      uploadLicenseStatus={[Function]}
    >
      <div
        className="licenseManagement__contain"
      >
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="l"
          justifyContent="spaceAround"
          responsive={true}
          wrap={false}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--responsive"
          >
            <EuiFlexItem
              component="div"
              grow={false}
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <EuiTitle
                  size="l"
                >
                  <h1
                    className="euiTitle euiTitle--large"
                  >
                    Upload your license
                  </h1>
                </EuiTitle>
              </div>
            </EuiFlexItem>
          </div>
        </EuiFlexGroup>
        <EuiSpacer
          size="l"
        >
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiText>
              <div
                className="euiText"
              >
                Your license key is a JSON file with a signature attached.
              </div>
            </EuiText>
            <EuiText>
              <div
                className="euiText"
              >
                Uploading a license will replace your current
                 
                <strong />
                 license.
              </div>
            </EuiText>
            <EuiSpacer
              size="l"
            >
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiForm
              error={
                Array [
                  "Error encountered uploading license: Check your license file.",
                ]
              }
              isInvalid={true}
            >
              <div
                className="euiForm"
              >
                <EuiCallOut
                  className="euiForm__errors"
                  color="danger"
                  size="m"
                  title="Please address the errors in your form."
                >
                  <div
                    className="euiCallOut euiCallOut--danger euiForm__errors"
                  >
                    <div
                      className="euiCallOutHeader"
                    >
                      <span
                        className="euiCallOutHeader__title"
                      >
                        Please address the errors in your form.
                      </span>
                    </div>
                    <EuiText
                      size="s"
                    >
                      <div
                        className="euiText euiText--small"
                      >
                        <ul>
                          <li
                            className="euiForm__error"
                            key="Error encountered uploading license: Check your license file."
                          >
                            Error encountered uploading license: Check your license file.
                          </li>
                        </ul>
                      </div>
                    </EuiText>
                  </div>
                </EuiCallOut>
                <EuiText>
                  <div
                    className="euiText"
                  >
                    <EuiFilePicker
                      id="licenseFile"
                      initialPromptText="Select or drag your license file"
                      onChange={[Function]}
                    >
                      <div
                        className="euiFilePicker"
                      >
                        <div
                          className="euiFilePicker__wrap"
                        >
                          <input
                            className="euiFilePicker__input"
                            id="licenseFile"
                            onChange={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                            type="file"
                          />
                          <div
                            className="euiFilePicker__prompt"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFilePicker__icon"
                              size="l"
                              type="importAction"
                            >
                              <importAction
                                aria-hidden="true"
                                className="euiIcon euiIcon--large euiFilePicker__icon"
                                height="16"
                                style={
                                  Object {
                                    "fill": undefined,
                                  }
                                }
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--large euiFilePicker__icon"
                                  height="16"
                                  style={
                                    Object {
                                      "fill": undefined,
                                    }
                                  }
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                                  />
                                </svg>
                              </importAction>
                            </EuiIcon>
                            <div
                              className="euiFilePicker__promptText"
                            >
                              Select or drag your license file
                            </div>
                          </div>
                        </div>
                      </div>
                    </EuiFilePicker>
                  </div>
                </EuiText>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiFlexGroup
                  alignItems="stretch"
                  component="div"
                  gutterSize="l"
                  justifyContent="spaceBetween"
                  responsive={true}
                  wrap={false}
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--responsive"
                  >
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButtonEmpty
                          color="primary"
                          href="#/management/elasticsearch/license_management/home"
                          iconSide="left"
                          type="button"
                        >
                          <a
                            className="euiButtonEmpty euiButtonEmpty--primary"
                            href="#/management/elasticsearch/license_management/home"
                          >
                            <span
                              className="euiButtonEmpty__content"
                            >
                              <span>
                                Cancel
                              </span>
                            </span>
                          </a>
                        </EuiButtonEmpty>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButton
                          color="primary"
                          data-test-subj="uploadLicenseButton"
                          fill={true}
                          iconSide="left"
                          isLoading={false}
                          onClick={[Function]}
                          type="button"
                        >
                          <button
                            className="euiButton euiButton--primary euiButton--fill"
                            data-test-subj="uploadLicenseButton"
                            onClick={[Function]}
                            type="button"
                          >
                            <span
                              className="euiButton__content"
                            >
                              <span
                                className="euiButton__text"
                              >
                                Upload
                              </span>
                            </span>
                          </button>
                        </EuiButton>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
              </div>
            </EuiForm>
          </div>
        </EuiPanel>
      </div>
    </UploadLicense>
  </Connect(UploadLicense)>
</Provider>
`;

exports[`UploadLicense should display error when ES returns error 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(UploadLicense)>
    <UploadLicense
      addUploadErrorMessage={[Function]}
      applying={false}
      currentLicenseType=""
      errorMessage="Error encountered uploading license: Can not upgrade to a production license unless TLS is configured or security is disabled"
      isInvalid={false}
      needsAcknowledgement={false}
      uploadLicense={[Function]}
      uploadLicenseStatus={[Function]}
    >
      <div
        className="licenseManagement__contain"
      >
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="l"
          justifyContent="spaceAround"
          responsive={true}
          wrap={false}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--responsive"
          >
            <EuiFlexItem
              component="div"
              grow={false}
            >
              <div
                className="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <EuiTitle
                  size="l"
                >
                  <h1
                    className="euiTitle euiTitle--large"
                  >
                    Upload your license
                  </h1>
                </EuiTitle>
              </div>
            </EuiFlexItem>
          </div>
        </EuiFlexGroup>
        <EuiSpacer
          size="l"
        >
          <div
            className="euiSpacer euiSpacer--l"
          />
        </EuiSpacer>
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiText>
              <div
                className="euiText"
              >
                Your license key is a JSON file with a signature attached.
              </div>
            </EuiText>
            <EuiText>
              <div
                className="euiText"
              >
                Uploading a license will replace your current
                 
                <strong />
                 license.
              </div>
            </EuiText>
            <EuiSpacer
              size="l"
            >
              <div
                className="euiSpacer euiSpacer--l"
              />
            </EuiSpacer>
            <EuiForm
              error={
                Array [
                  "Error encountered uploading license: Can not upgrade to a production license unless TLS is configured or security is disabled",
                ]
              }
              isInvalid={true}
            >
              <div
                className="euiForm"
              >
                <EuiCallOut
                  className="euiForm__errors"
                  color="danger"
                  size="m"
                  title="Please address the errors in your form."
                >
                  <div
                    className="euiCallOut euiCallOut--danger euiForm__errors"
                  >
                    <div
                      className="euiCallOutHeader"
                    >
                      <span
                        className="euiCallOutHeader__title"
                      >
                        Please address the errors in your form.
                      </span>
                    </div>
                    <EuiText
                      size="s"
                    >
                      <div
                        className="euiText euiText--small"
                      >
                        <ul>
                          <li
                            className="euiForm__error"
                            key="Error encountered uploading license: Can not upgrade to a production license unless TLS is configured or security is disabled"
                          >
                            Error encountered uploading license: Can not upgrade to a production license unless TLS is configured or security is disabled
                          </li>
                        </ul>
                      </div>
                    </EuiText>
                  </div>
                </EuiCallOut>
                <EuiText>
                  <div
                    className="euiText"
                  >
                    <EuiFilePicker
                      id="licenseFile"
                      initialPromptText="Select or drag your license file"
                      onChange={[Function]}
                    >
                      <div
                        className="euiFilePicker"
                      >
                        <div
                          className="euiFilePicker__wrap"
                        >
                          <input
                            className="euiFilePicker__input"
                            id="licenseFile"
                            onChange={[Function]}
                            onDragLeave={[Function]}
                            onDragOver={[Function]}
                            onDrop={[Function]}
                            type="file"
                          />
                          <div
                            className="euiFilePicker__prompt"
                          >
                            <EuiIcon
                              aria-hidden="true"
                              className="euiFilePicker__icon"
                              size="l"
                              type="importAction"
                            >
                              <importAction
                                aria-hidden="true"
                                className="euiIcon euiIcon--large euiFilePicker__icon"
                                height="16"
                                style={
                                  Object {
                                    "fill": undefined,
                                  }
                                }
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="euiIcon euiIcon--large euiFilePicker__icon"
                                  height="16"
                                  style={
                                    Object {
                                      "fill": undefined,
                                    }
                                  }
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M9 10.114l1.85-1.943a.52.52 0 0 1 .77 0c.214.228.214.6 0 .829l-1.95 2.05a1.552 1.552 0 0 1-2.31 0L5.41 9a.617.617 0 0 1 0-.829.52.52 0 0 1 .77 0L8 10.082V1.556C8 1.249 8.224 1 8.5 1s.5.249.5.556v8.558zM4.18 6a.993.993 0 0 0-.972.804l-1.189 6A.995.995 0 0 0 2.991 14h11.018a1 1 0 0 0 .972-1.196l-1.19-6a.993.993 0 0 0-.97-.804H4.18zM6 5v1h5V5h1.825c.946 0 1.76.673 1.946 1.608l1.19 6A2 2 0 0 1 14.016 15H2.984a1.992 1.992 0 0 1-1.945-2.392l1.19-6C2.414 5.673 3.229 5 4.174 5H6z"
                                  />
                                </svg>
                              </importAction>
                            </EuiIcon>
                            <div
                              className="euiFilePicker__promptText"
                            >
                              Select or drag your license file
                            </div>
                          </div>
                        </div>
                      </div>
                    </EuiFilePicker>
                  </div>
                </EuiText>
                <EuiSpacer
                  size="m"
                >
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </EuiSpacer>
                <EuiFlexGroup
                  alignItems="stretch"
                  component="div"
                  gutterSize="l"
                  justifyContent="spaceBetween"
                  responsive={true}
                  wrap={false}
                >
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--responsive"
                  >
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButtonEmpty
                          color="primary"
                          href="#/management/elasticsearch/license_management/home"
                          iconSide="left"
                          type="button"
                        >
                          <a
                            className="euiButtonEmpty euiButtonEmpty--primary"
                            href="#/management/elasticsearch/license_management/home"
                          >
                            <span
                              className="euiButtonEmpty__content"
                            >
                              <span>
                                Cancel
                              </span>
                            </span>
                          </a>
                        </EuiButtonEmpty>
                      </div>
                    </EuiFlexItem>
                    <EuiFlexItem
                      component="div"
                      grow={false}
                    >
                      <div
                        className="euiFlexItem euiFlexItem--flexGrowZero"
                      >
                        <EuiButton
                          color="primary"
                          data-test-subj="uploadLicenseButton"
                          fill={true}
                          iconSide="left"
                          isLoading={false}
                          onClick={[Function]}
                          type="button"
                        >
                          <button
                            className="euiButton euiButton--primary euiButton--fill"
                            data-test-subj="uploadLicenseButton"
                            onClick={[Function]}
                            type="button"
                          >
                            <span
                              className="euiButton__content"
                            >
                              <span
                                className="euiButton__text"
                              >
                                Upload
                              </span>
                            </span>
                          </button>
                        </EuiButton>
                      </div>
                    </EuiFlexItem>
                  </div>
                </EuiFlexGroup>
              </div>
            </EuiForm>
          </div>
        </EuiPanel>
      </div>
    </UploadLicense>
  </Connect(UploadLicense)>
</Provider>
`;
